# laboratorio_v5

./: .env.example  .gitignore  CLAUDE.md  PRD_v2_Diagnostico_Organizacional.docx  README.md  SPRINT1_READINESS.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20260406_0001_initial_models.py  20260407_0002_add_parent_group_id.py  20260411_0003_add_strategic_context_to_organizations.py  20260416_0004_add_quick_assessment.py  20260416_0005_fase1_canvas_structure.py  20260417_0001_initial_complete.py  20260417_0006_add_diagnosis_results.py  20260417_0007_make_quick_assessment_owner_nullable.py  20260417_0008_add_node_type_and_org_structure_type.py  (+11 more)
backend/app/: db.py  main.py  questions.py  questions_free.py  questions_instrument_v2.py  questions_premium.py
backend/app/models/: job.py  (+16 more)
backend/scripts/: backfill_interview_data.py  cleanup_stale_analysis_runs.py  migrate_data_to_new_model.py  migration_dry_run.py  migration_dry_run_report.md  migration_execution_report.md  migration_execution_report_20260421T174357.md  migration_execution_report_20260421T174416.md
backend/tests/: conftest.py  test_analysis_engine_compatibility.py  test_bulk_node_positions.py  test_compat_admin_notes_preservation.py  test_compat_layer.py  test_groups.py  test_members.py  test_migration_context_notes.py  test_migration_idempotency.py  test_motor_fk_rename.py  test_node_documents.py  test_node_invariants.py  test_organizations.py  test_results.py  test_sprint_5a_contract.py
(+194 files in other folders)
